--- a/src/devtools/devtools.html
+++ b/src/devtools/devtools.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Pink Sock DevTools</title>
-  <script src="devtools.js"></script>
+  <script src="/src/devtools/devtools.js"></script>
 </head>
 <body>
   <!-- DevTools panel registration script -->
