big update, real big, super big, it's yuuuuge

--- a/src/about.html
+++ b/src/about.html
@@ -151,10 +151,11 @@
     </div>
     
     <div class="feature">
-      <h3>Detailed DevTools Panel</h3>
+      <h3>Detailed Security Reports</h3>
       <p>
-        Provides an in-depth analysis through a custom DevTools panel, allowing developers to see detailed
-        information about detected vulnerabilities and how to fix them.
+        Provides comprehensive security analysis with detailed reports directly in the extension interface, 
+        allowing developers to easily review vulnerabilities and implement fixes without needing to switch 
+        to developer tools.
       </p>
     </div>
   </section>
@@ -168,7 +169,7 @@
       <li>The extension scans the page for iframe elements</li>
       <li>It analyzes security attributes, headers, and configurations</li>
       <li>Security issues are identified and categorized by severity</li>
-      <li>Results are displayed in the extension popup and DevTools panel</li>
+      <li>Results are displayed in the extension popup with detailed reports</li>
       <li>Specific remediation suggestions are provided for each issue</li>
     </ol>
   </section>
